# token-efficient-rag

./: .gitignore  Challenge.md  README.md  pyproject.toml  questions.json
docs/: ambiguous_safe_mode.md  boot_sequence.md  changelog_v4.md  crew_manifest.md  long_procedures.md  network_policies.md  notes_logs.md  safe_modes.md  staff_bios.md  station_menu.md
src/bluebridge/: cli.py  config.py  files.py  models.py  rag.py  vector_store.py
